# gst-kit

./: .eslintrc.json  .gitignore  .npmignore  .oxfmtrc.json  .prettierrc  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  binding.gyp  eslint.config.mjs  package-lock.json  package.json  rollup.config.mjs  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
examples/: appsink.mjs  appsrc-eos.mjs  appsrc.mjs  basic-pipeline.mjs  bus.mjs  element-exists.mjs  fakesink.mjs  glshader.mjs  pipeline-eos.mjs  query.mjs  record-to-file.mjs  rtp-timestamp.mjs  seek.mjs  set-pad.mjs
modules/: common.cjs  esm.mjs
scripts/: build-native.mjs  clean.mjs  ensure-native-addon.js  ensure-native-addon.mjs  patch-node-gyp-lto.mjs
src/cpp/: GLibHelpers.cpp  GLibHelpers.h  GObjectWrap.cpp  GObjectWrap.h  Pipeline.cpp  Pipeline.h  addon.cpp  async-workers.cpp  async-workers.hpp  constructor_registry.cpp  constructor_registry.hpp  element.cpp  element.hpp  pipeline.cpp  pipeline.hpp  type-conversion.cpp  type-conversion.hpp
src/ts/: appsink.test.ts  appsrc-eos.test.ts  appsrc.test.ts  bus-pop.test.ts  codec.test.ts  element-exists.test.ts  element-props.test.ts  fakesink.test.ts  index.ts  pipeline-eos.test.ts  pipeline-pad.test.ts  pipeline-query.test.ts  pipeline-seek.test.ts  pipeline-state.test.ts  rtp-stats.test.ts  test-utils.ts
